--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "react-scripts": "^0.9.4"
   },
   "dependencies": {
-    "immutable": "^3.8.1",
+    "bulma": "^0.3.2",
+    "font-awesome": "^4.7.0",
+    "ramda": "^0.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
-    "react-router-dom": "^4.0.0-beta.6",
+    "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
     "redux-saga": "^0.14.2"
   },
