--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "create-react-redux-sagas-flow-immutable-app",
+  "name": "clubbernal-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://goncy.github.io/create-react-redux-sagas-flow-immutable-app",
+  "homepage": "https://goncy.github.io/clubbernal-web",
   "devDependencies": {
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.0",
@@ -12,11 +12,13 @@
     "react-scripts": "^0.9.4"
   },
   "dependencies": {
-    "bulma": "^0.3.2",
+    "animate.css": "^3.5.2",
+    "bulma": "^0.4.0",
     "font-awesome": "^4.7.0",
     "ramda": "^0.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-image-gallery": "^0.7.15",
     "react-redux": "^5.0.2",
     "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
